# aurora

./: .gitignore  NOTES.md  README.md  Resonance.spec  config.yaml  pyproject.toml
Resonance/: Resonance.py  build_app.sh  build_model.py
aurora/: aurora.py  build_app.sh  build_model.py
data/: aurora_template.npz  model_extremes_for_editing.npz  sub043_minimal_contours.npz
scripts/: smooth_contours.py
