[project]
name = "resonance"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Kirkham",email = "s.d.kirkham@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "polars (>=1.34.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "resonance", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
